Revision history for {{$dist->name}}

{{$NEXT}}
          INCOMPATIBLE CHANGES:

          the AllFiles plugin is now known as GatherDir

          the InstallDirs plugin has been replaced by ExecDir and ShareDir

          the PodTests plugin has been replaced by PodCoverageTests and
          PodSyntaxTests

          OTHER CHANGES:

          numerous improvements to testing libraries
          ...and numerous actual tests!

          added include_dotfiles option to GatherDir
          allow relative root directory for GatherDir

          AutoPrereq is now distributed with Dist::Zilla

          AutoPrereq will make requirements only found in ./t "build_requires"

          ConfirmRelease plugin added and made part of @Classic (dagolden)

          MakeMaker-produced Makefile.PL will produce warnings less often

          Prereq plugin can target config_requires, build_requires, etc

          dzil takes -v arg to enable debugging globally or per-plugin

          PkgVersion now adds a fully-qualified $VERSION variables, not 'our'

          add 'dzil nop' command to initialize zilla object and exit

1.100711  2010-03-12 12:51:55 America/New_York
          remove bogus attempt to load obsolete DZ::Logger::Global

1.100710  2010-03-12 09:58:10 America/New_York
          huge update to logging system; uses Log::Dispatchouli::Proxy

          UploadToCPAN, FakeRelease now log via the standard logger
          App::Cmd layer'Zilla is shared between commands

          bump up some prereqs to avoid bugs fixed upstream

          HIGHLY EXPERIMENTAL: first pass at testing systems

1.100660  2010-03-07 07:56:30 America/New_York
          Global logger handles log_fatal correctly

1.100651  2010-03-06 23:18:54 America/New_York
          improve how plugin and pluginbundle names are generated and reported
          improve logging to make it clear what is logging what
          add a -v switch to dzil to allow "verbose" logging
